
syntax = "proto3";

package typ_p;
option go_package = "gitlab.com/mippo.app/typ-p.git/go/pb/typ_p";


message number {
  oneof value_of {
    int32 int32_value = 1;
    int64 int64_value = 2;
    float float_value = 3;
    double double_value = 4; 
    
  }
}
